gitops/apps/nginx-kustomize/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2

  template:
    metadata:
      labels:
        environment: dev

    spec:
      containers:
        - name: nginx

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 300m
              memory: 256Mi
