gitops/apps/nginx-kustomize/overlays/dev/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
spec:
  replicas: 2

  template:
    metadata:
      labels:
        environment: dev

    spec:
      containers:
        - name: nginx

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 300m
              memory: 256Mi
