gitops/apps/nginx-kustomize/overlays/dev/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: platform-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/part-of: platform-demo
        environment: dev
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.5                    #nginx:1.29.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
 # strategy:
 #   blueGreen:
 #     activeService: dev-nginx
 #     previewService: dev-nginx-preview
 #     autoPromotionEnabled: false
 #    canary:
 #     canaryService: dev-nginx-canary
 #     stableService: dev-nginx
 #     trafficRouting:
 #       alb:
 #         ingress: dev-nginx
 #         rootService: dev-nginx-root
 #         servicePort: 80
 #     steps:
 #       - setWeight: 10
 #        - pause: {}
 #       - setWeight: 25
 #       - pause: {duration: 30}
 #       - setWeight: 50
 #       - pause: {duration: 30}
 #       - setWeight: 75
 #       - pause: {duration: 30}

# Note: Pause{} with no duration means indefinite manual pause (matches your automated promotion coming later)

  strategy:
    canary:
      canaryService: dev-nginx-canary
      stableService: dev-nginx
      trafficRouting:
        alb:
          ingress: dev-nginx
          rootService: dev-nginx-root
          servicePort: 80
      steps:
        - setWeight: 10
        - analysis:
            templates:
              - templateName: dev-nginx-canary-health
              - templateName: dev-nginx-canary-error-rate
            args:
              - name: canary-hash
                valueFrom:
                  podTemplateHashValue: Latest
        - setWeight: 25
        - pause: {duration: 30}
        - setWeight: 50
        - pause: {duration: 30}
        - setWeight: 100
