gitops/apps/nginx-kustomize/overlays/dev/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: platform-demo
    environment: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
