gitops/apps/nginx-kustomize/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.dev-nginx-root: |
      {
        "Type":"forward",
        "ForwardConfig":{
          "TargetGroups":[
            {"ServiceName":"dev-nginx","ServicePort":"80","Weight":100},
            {"ServiceName":"dev-nginx-canary","ServicePort":"80","Weight":0}
          ]
        }
      }
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-nginx-root
                port:
                  name: use-annotation
